kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web # Название нашего объекта Deployment
spec:
  replicas: 3 # Начнем с одного пода
  selector: # Укажем, какие поды относятся к нашему Deployment:
    matchLabels: # - это поды с меткой
      app: web # app и ее значением web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
      maxSurge: 0
  template: # Теперь зададим шаблон конфигурации пода
    metadata:
      name: web
      labels:
        app: web
    spec:
      volumes:
      - name: app
        emptyDir: {}
      containers:
      - name: web1
        image: zav19/web_intro:1.0
        volumeMounts:
        - name: app
          mountPath: /app
          readOnly: true
        readinessProbe: # Добавим проверку готовности
          httpGet: # веб-сервера отдавать
            path: /index.html # контент
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
