kubernetes-networks/dns-svc-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dns-svc-lb-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: external-dns
  namespace: kube-system
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 172.17.255.254
  clusterIP:
  ports:
    - protocol: TCP
      port: 53

---
apiVersion: v1
kind: Service
metadata:
  name: dns-svc-lb-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: external-dns
  namespace: kube-system
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 172.17.255.254
  ports:
    - protocol: UDP
      port: 53
